--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <header>
 		<div class="container">
 			<div class="fixed">
-			<div class="logo"><p>CS</p></div>
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
+				<div class="logo"><p>CS</p></div>
+				<nav>
+					<ul>
+						<a href="#">Home</a>
 					<li><a href="#">Pages</a></li>
 					<li><a href="#about">Features</a></li>
 					<li><a href="#">Extensions</a></li>
@@ -39,7 +39,7 @@
 			<p>power by psdfreebies.com</p>
 			<div class="scroll">
 				<span>Scroll Down</span>
-				<a href="#about"><i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+				<a href="#about"><i class="fa fa-chevron-down"></i></a>
 			</div>
 		</div>
 		</div>
