--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			<div class="fixed">
 				<div class="logo"><p>CS</p></div>
 				<nav>
-					<ul>
+					<div>
 						<a href="#">Home</a>
-					<li><a href="#">Pages</a></li>
-					<li><a href="#about">Features</a></li>
-					<li><a href="#">Extensions</a></li>
-					<li><a href="#">Tutorials</a></li>
-					<li><a href="#contact">Contact us</a></li>
-				</ul>
+						<a href="#">Pages</a>
+						<a href="#about">Features</a>
+						<a href="#">Extensions</a>
+						<a href="#">Tutorials</a>
+						<a href="#contact">Contact us</a>
+					</div>
 			<div class="socials">
 				<a href="#"><i class="fa fa-facebook"></i></a>
 				<a href="#"><i class="fa fa-twitter"></i></a>
