--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
 </head>
 <body>
 <header>
-		<div class="container">
-			<div class="fixed">
-				<div class="logo"><p>CS</p></div>
-				<nav>
-					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Pages</a></li>
-						<li><a href="#about">Features</a></li>
-						<li><a href="#">Extensions</a></li>
-						<li><a href="#">Tutorials</a></li>
-						<li><a href="#contact">Contact us</a></li>
-					</ul>
-			<div class="socials">
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-skype"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
-			</div>
+	<div class="fixed">
+		<div class="container" style="clear:both">
+			<div class="logo"><p>CS</p></div>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Pages</a></li>
+					<li><a href="#about">Features</a></li>
+					<li><a href="#">Extensions</a></li>
+					<li><a href="#">Tutorials</a></li>
+					<li><a href="#contact">Contact us</a></li>
+				</ul>
+				<div class="socials">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-skype"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+				</div>
 			</nav>
 		</div>
-		<div style="clear:both"></div>
+	</div>
+		<div style="clear:both" ></div>
+		<div class="fixed1"></div>
 
 
 		<div class="slide">
-			<h1>Creatives</h1>
+			<h2>Creatives</h2>
 			<p>power by psdfreebies.com</p>
 			<div class="scroll">
 				<span>Scroll Down</span>
@@ -48,7 +50,6 @@
 	<div class="about" id="about">
 		<div class="container">
 		<div class="heading">
-			<span>w</span>
 			<h2>We are an awesome agency</h2>
 		</div>
 		<div class="features">
