--- a/index.html
+++ b/index.html
@@ -50,28 +50,29 @@
 	<div class="about" id="about">
 		<div class="container">
 		<div class="heading">
+			<span>w</span>
 			<h2>We are an awesome agency</h2>
 		</div>
 		<div class="features">
 			<div class="feature">
 				<div class="feature-img"><img src="img/copy.png" alt="icon"></div>
 				<h3>Feature one</h3>
-				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.Donec id elit non mi porta gravida at eget metus.</p>
+				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 			</div>
 			<div class="feature">
 				<div class="feature-img"><img src="img/copy.png" alt="icon"></div>
 				<h3>Feature two</h3>
-				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.Donec id elit non mi porta gravida at eget metus.</p>
+				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 			</div>
 			<div class="feature">
 				<div class="feature-img"><img src="img/search.png" alt="icon"></div>
 				<h3>Feature three</h3>
-				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.Donec id elit non mi porta gravida at eget metus.</p>
+				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 			</div>
 			<div class="feature">
 				<div class="feature-img"><img src="img/says.png" alt="icon"></div>
 				<h3>Feature four</h3>
-				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.Donec id elit non mi porta gravida at eget metus.</p>
+				<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 			</div>
 		</div>
 		</div>
