docs: update index.html

--- a/index.html
+++ b/index.html
@@ -36,12 +36,8 @@
 		<div class="fixed1"></div>
 
 		<div class="slide">
-			<h2>Creatives</h2>
-			<p>power by psdfreebies.com</p>
-			<div class="scroll">
-				<span>Scroll Down</span>
-				<a href="#about"><i class="fa fa-chevron-down"></i></a>
-			</div>
+			<h2>Shpakov Sam</h2>
+			<p>Web developer</p>
 		</div>
 	</div>
 </header>
