--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<div class="heading">
 					<span>C</span>
 					<h2>Contacts</h2>
-					<p> E-mail: <a href="mailto:mailto:SkaymanT@yandex.ru"> SkaymanT@yandex.ru</a>
+					<p> E-mail: <a href="mailto:SkaymanT@yandex.ru"> SkaymanT@yandex.ru</a>
 					<p> Telegram: <a href="https://t.me/Jack34Black">@Jack34Black</a></p>
 				</div>
 				<form>
