--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Creatives</title>
+	<title>Summary</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Заглавная страница - описание" />
  	<meta name="keywords" content="Ключевые слова" />
